# Estufa-inteligente

./: .gitignore  README.md  run.py
backend/: auth.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  seed.py  simulator.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  api.ts  index.css
frontend/src/components/: Navbar.tsx  Sidebar.tsx
frontend/src/pages/: Configuracoes.tsx  Dashboard.tsx  Estufa.tsx  Historico.tsx  Inicio.tsx  Login.tsx  Perfil.tsx  PlantaRobotica.tsx  Sensores.tsx
hardware/esp32_firmware/: esp32_firmware.ino
