[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=5.0.0",
    "cryptography>=49.0.0",
    "fastapi>=0.138.0",
    "passlib>=1.7.4",
    "pymysql>=1.2.0",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.49.0",
    "websockets>=14.0",
]
